src/test/deca/context/invalid/sans_objet/unknown_type.deca
// Description:
//     Declaration avec type non défini;
//
// Resultats:
//    Ligne 11: Unknown type
//
// Historique:
//    cree le 01/01/2023

{
   lala x;
}
